--- a/css/styles.css
+++ b/css/styles.css
@@ -3,17 +3,48 @@
     color: #434455;
     background-color: #FFF;
 }
-.top-address{
-    font-style: normal
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
-.list{
+ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+}
+
+
+.list {
     list-style-type: none;
 }
 
-.link{
-text-decoration: none;
+.link {
+    text-decoration: none;
 }
+
+/* header */
+
+.header-container{
+display: flex;
+}
+
+.studio-list {
+display: flex;
+gap: 40px;
+}
+
+.top-address {
+    font-style: normal
+}
+
 .logo {
     color: var(--IRIS, #4D5AE5);
         font-family: Raleway, sans-serif;
@@ -33,6 +64,7 @@ text-decoration: none;
         letter-spacing: 0.03em;
         text-transform: uppercase;
 }
+
 .link-text{
     color: var(--NAVY-BLUE, #2E2F42);
         font-size: 16px;
@@ -40,21 +72,17 @@ text-decoration: none;
         line-height: 1.5;
         letter-spacing: 0.02em;
 }
+
 .link-text:hover,
-.link-text:focus{
+.link-text:focus,
+.link-text:active{
     color: var(--OCEAN, #404BBF);
         font-size: 16px;
         font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.02em;
 }
-.link-text:active{
-color: var(--OCEAN, #404BBF);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
+
 
 .address-link{
     color: var(--SLATE);
@@ -63,6 +91,7 @@ color: var(--OCEAN, #404BBF);
         line-height: 1.5;
         letter-spacing: 0.02em;
 }
+
 .address-link:hover,
 .address-link:focus{
         font-weight: 400;
@@ -70,6 +99,9 @@ color: var(--OCEAN, #404BBF);
         flex-shrink: 0;
         color: #404BBF;
 }
+
+/* 1 section */
+
 .first-section{
     background-color: #2E2F42;
 }
@@ -93,6 +125,7 @@ color: var(--OCEAN, #404BBF);
         font-weight: 500;
         cursor: pointer;
 }
+
 .button:hover,
 .button:focus{
         background: var(--OCEAN, #404BBF);
@@ -124,6 +157,7 @@ color: var(--OCEAN, #404BBF);
         text-transform: capitalize;
         text-align: center
 }
+
 .third-section{
     background: var(--CLOUD, #F4F4FD);
 }
@@ -131,9 +165,11 @@ color: var(--OCEAN, #404BBF);
 .list-item{
     background-color: #FFFFFF
 }
+
 .footer{
     background: var(--NAVY-BLUE, #2E2F42);
 }
+
 .logo-footer{
     color: var(--CLOUD, #F4F4FD);
         font-family: Raleway, sans-serif;
