--- a/css/styles.css
+++ b/css/styles.css
@@ -279,12 +279,12 @@ img{
     display: flex;
     flex-wrap: wrap;
     column-gap: 24px;
-
+    row-gap: 48px;
+    flex-direction: row;
 }
 
 .portfolio-list-item{
-    width: calc((100%-120px)/6);
-border: 1px solid var(--CORNFLOWER, #E7E9FC);
+    width: calc((100%-48px)/3);
 }
 /* ==========/FOURTH SECTION========== */
 
