--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,11 @@ img{
     font-style: normal
 }
 
+.page-header{
+    border-bottom: 1px solid #e7e9fc
+}
+
+
 .logo {
     color: var(--IRIS, #4D5AE5);
         font-family: Raleway, sans-serif;
@@ -156,10 +161,10 @@ img{
         line-height: 1.07;
         letter-spacing: 0.02em;
         text-align: center;
-        width: 496px;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 48px;
+        max-width: 496px;
 }
 
 .button{
@@ -175,8 +180,11 @@ img{
         margin-right: auto;
         margin-left: auto;
         border-radius: 4px;
-            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-            padding: 16px 32px;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        padding: 16px 32px;
+        min-width: 169px;
+        height: 56px;
+        border: none;
 }
 
 .button:hover,
@@ -207,7 +215,7 @@ img{
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.02em;
-        padding-top: 32px;
+        margin-bottom: 8px
 }
 
 .section-text{
@@ -217,7 +225,6 @@ img{
         line-height: 1.5;
         letter-spacing: 0.02em;
         padding-top: 8px;
-        padding-bottom: 32px;
 }
 .title{
     color: var(--NAVY-BLUE, #2E2F42);
@@ -227,7 +234,7 @@ img{
         letter-spacing: 0.02em;
         text-transform: capitalize;
         text-align: center;
-        padding-bottom: 72px;;
+        margin-bottom: 72px;
 }
 
 .advantages-list-container{
@@ -237,6 +244,7 @@ img{
 
 .item-container{
     width: 264px;
+    margin-bottom: 8px;
 }
 
 .advantages-list-item{
@@ -269,6 +277,8 @@ img{
 
 .team-text-container{
    text-align: center;
+   padding: 32px 0;
+margin-bottom: 8px;
 }
 /* ===========/THIRD SECTION========== */
 
@@ -284,12 +294,12 @@ img{
 }
 
 .portfolio-list-item{
-width: calc((100%-48px)/3);
+width: calc((100% - 48px) / 3);
 }
 
 
 .title-text-container {
-    padding-left: 16px;
+    padding: 32px 16px;
     border: 1px solid var(--CORNFLOWER, #E7E9FC);
     border-top: none;
 }
